fix for ul bullet points being off center

--- a/sass/_dronekit.scss
+++ b/sass/_dronekit.scss
@@ -53,6 +53,7 @@ body {
 	p {
 		font-family: 'PT Serif', serif;
 		font-size: 16px;
+		display: inline;
 	}
 }
 
